--- a/MakeFile
+++ b/MakeFile
@@ -8,6 +8,6 @@ install:
 
 lint:
 	hadolint Dockerfile
-	pylint --disable=R,C,W1203,W1202 ./app/app.py
+	pylint --disable=R,C,W1203,W1202 app.py
 
 all: install lint
