--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
           command: |
             sudo apt update
             sudo pip install --upgrade pip
+            sudo pip install -r requirements.txt
             sudo pip install pylint
             sudo wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64 &&\
             sudo chmod +x /bin/hadolint
