--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 jobs:
   lint:
     docker:
-      - image: circleci/python:3.6.7-stretch
+      - image: circleci/python:3.9-buster
     steps:
       - checkout
       - restore_cache:
