--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,11 @@
 version: 2.1
 
-orbs:
-  aws-cli: circleci/aws-cli@2.0.3
+executors:
+  docker-publisher:
+    environment:
+      IMAGE_TAG: vasudevla/hello-world
+    docker:
+      - image: docker:stable
 
 jobs:
   lint:
@@ -36,19 +40,40 @@ jobs:
             make lint
   
   build-image:
-    docker:
-      - image: docker:latest
+    executor: docker-publisher
     steps:
       - checkout
       - setup_remote_docker
       - run:
-          name: Build and Upload Image
+          name: Build Image
           command: |
-            docker build -t hello-world .
+            docker build -t "${IMAGE_TAG}" .
             docker image ls
-            docker tag hello-world vasudevla/hello-world
-            docker login
-            docker push vasudevla/hello-world
+      - run:
+          name: Save Docker image
+          command: docker save --output image.tar "${IMAGE_TAG}"
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./image.tar
+  push-image:
+    executor: docker-publisher
+    steps:
+      - checkout
+      - setup_remote_docker
+      - attach_workspace:
+          at: /tmp/workspace
+      - run:
+          name: Load Docker image
+          command: docker load --input /tmp/workspace/image.tar
+      - run:
+          name: Push Image to Docker Hub
+          command: |
+             echo “$DOCKERHUB_PASSWORD” | docker login -u “$DOCKERHUB_USERNAME” — password-stdin
+             docker push "${IMAGE_TAG}"
+             
+             
+
 
 workflows:
   build_and_deploy:
@@ -56,3 +81,5 @@ workflows:
       - lint
       - build-image:
           requires: [lint]
+      - push-image:
+          requires: [build-image]
