--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ jobs:
       - run:
           name: Push Image to Docker Hub
           command: |
-             echo “$DOCKERHUB_PASSWORD” | docker login --username “$DOCKERHUB_USERNAME” --password-stdin
+             echo "$DOCKERHUB_PASSWORD" | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
              docker push "${IMAGE_TAG}"
 
 workflows:
