--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  kubernetes: circleci/kubernetes@1.3.1
+
 executors:
   docker-publisher:
     environment:
@@ -84,18 +87,22 @@ jobs:
           name: Create cluster and nodegroup
           command: |
              aws cloudformation deploy --template-file infra.yml --stack-name "capstone-cluster" --parameter-overrides file://infra-parameters.json  --tags project=capstone --capabilities CAPABILITY_NAMED_IAM
-  setup-kubectl:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: yum install -y tar gzip
-      - run:
-          name: update kubeconfig
-          command: |
-             aws eks --region us-east-1 update-kubeconfig --name capstone-cluster
+          no_output_timeout: 20m
+  
+  create-deployment-service:
+     executor: aws-eks/python3
+     steps:
+        - checkout
+        - aws-eks/update-kubeconfig-with-authenticator:
+            cluster-name: CapstoneCluster
+            install-kubectl: true
+        - kubernetes/create-or-update-resource:
+            get-rollout-status: true
+            resource-file-path: deployment.yaml
+            resource-name: helloworld-deployment
+        - kubernetes/create-or-update-resource:
+            resource-file-path: service.yaml
+            resource-name: helloworld-service
 
 workflows:
   build_and_deploy:
@@ -105,7 +112,7 @@ workflows:
           requires: [lint]
       - push-image:
           requires: [build-image]
-      - create-cluster:
+      # - create-cluster:
+      #     requires: [push-image]
+      - create-deployment-service:
           requires: [push-image]
-      - setup-kubectl:
-          requires: [create-cluster]
